# boarddy

./: .gitignore  GitHub readme.md  LICENSE.md  North star.md  README.md  agents prompt.md  architecture.md  feature expansion.md  index.html  master doc.md  package-lock.json  package.json  vite.config.ts  website copy.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  developer_mode_suggestion.md  documentation_improvement.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml
.github/workflows-disabled/: release.yml
docs/: API spec.md  CLI spec.md  PRD.md  UI UX.md  database.md  github_setup_guide.md  project blueprint.md  roadmap.md
src/: App.tsx  index.css  tauri-mock.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  database.rs  dictionary.rs  lib.rs  main.rs  notes.rs  search.rs  settings.rs  typing.rs  win_util.rs
src/components/: AutocompletePopup.tsx  ClipboardPanel.tsx  DictionaryPanel.tsx  NotesPanel.tsx  QuickPaste.tsx  RulesPanel.tsx  SettingsPanel.tsx
