[package]
name = "boarddy"
version = "0.1.0"
description = "Boarddy - Personal Input and Memory Platform"
authors = ["Huna Inc."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "boarddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
lazy_static = "1.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_TextServices",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
] }


